--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yourhead-website",
-  "version": "0.1.0",
+  "name": "fakeboat-website",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,30 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/lab": "^5.0.0-alpha.134",
-    "@mui/material": "^5.13.5",
     "@netlify/plugin-nextjs": "^4.37.4",
     "@react-hook/media-query": "^1.1.1",
     "@stripe/react-stripe-js": "^2.1.0",
-    "@stripe/stripe-js": "^1.54.0",
+    "@stripe/stripe-js": "^2.1.1",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.24.0",
     "@typeform/embed-react": "^2.21.0",
-    "env": "^0.0.2",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "framer-motion": "^10.12.16",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^13.4.19",
+    "framer-motion": "^10.16.4",
     "next": "^13.4.6",
-    "next-auth": "^4.22.1",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-simple-image-slider": "^2.4.1",
     "react-slideshow-image": "^4.2.1",
     "sharp": "^0.32.1",
-    "stripe": "^12.9.0",
-    "typescript": "^5.1.3"
+    "stripe": "^13.4.0",
+    "typescript": "^5.2.2"
   }
 }
